--- a/bundle/package.json
+++ b/bundle/package.json
@@ -1,10 +1,11 @@
 {
   "name": "customer-project-default",
-  "version": "6.0.2",
+  "version": "6.1.0",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "nohoist": ["**/react-router", "**/react-router-dom"],
   "scripts": {
     "clean": "rimraf **/node_modules",
     "start": "cd packages/app && yarn start",
